--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,2 +1,4 @@
 {% extends 'base.html' %}
-{% block title %} <title></title> {%%}
+{% block head %}
+{% block title %} <title>Edit User</title> {% endblock %}
+{% endblock %}
