--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,3 +2,16 @@
 {% block head %}
 {% block title %} <title>Edit User</title> {% endblock %}
 {% endblock %}
+{% block top_text %} {% endblock %}
+{% block content %}
+<h2>Edit {{user.name}}</h2>
+
+<form action="/users/{{user.id}}/edit" method="POST">
+    <input type="text" name="first-name" placeholder="First Name">
+    <input type="text" name="last-name" placeholder="Last Name">
+    <input type="text" name="img-url" placeholder="Avatar Url">
+    <button>Make Changes</button>
+</form>
+
+<button><a href="/users/{{user.id}}">Cancel Changes</a></button>
+{% endblock %}
