--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -1,16 +1,32 @@
 {% extends 'base.html' %}
 {% block head %}
-{% block title %} <title>Sign Up</title> {% endblock %}
+{% block title %} <title>Create New Post</title> {% endblock %}
 {% endblock %}
 {% block content %}
 {% block top_text %}{% endblock %}
     <h3>
         Create New Post for {user.name}:
     </h3>
-    <form action="/users/{{user.id}}/posts/new" method="POST">
-    <input type="text" name="Title" placeholder="Title">
-    <input type="text" name="content" placeholder="Write your post!">
-    <input type="text" name="img-url" placeholder="Avatar Url">
-    <button>Submit User</button>
+    <div class="form-group row">
+        <label for="title" class="col-sm-2 col-form-label">Title</label>
+        <div class="col-sm-10">
+          <input class="form-control" id="title" name="title">
+        </div>
+      </div>
+    
+      <div class="form-group row">
+        <label for="content" class="col-sm-2 col-form-label">Content</label>
+        <div class="col-sm-10">
+          <textarea class="form-control" id="content" name="content"></textarea>
+        </div>
+      </div>
+    
+      <div class="form-group row">
+        <div class="ml-auto mr-3">
+          <a href="/users/{{ user.id }}" class="btn btn-info">Cancel</a>
+          <button type="submit" class="btn btn-success">Add</button>
+        </div>
+      </div>
+    
     </form>
 {% endblock %}
