--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% block head %}
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    {% block title %}<title>All Users</title>{% endblock %}
-    {% endblock %}
+    <title>
+    Blogly &ndash;{% block title %}{% endblock %}
+    </title>
+    <link rel="stylesheet"
+        href="https://unpkg.com/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
-    {% block top_text %}<h2>Blogly</h2>{% endblock %}
+<div class="container mt-5">
     {% block content %}
-    <ul>
-        {% for user in users %}
-        <li><a href="/users/{{user.id}}">{{user.first_name}} {{user.last_name}}</a></li>
-        {% endfor %}
-    </ul>
-    <button><a href="/users/new">Add User</a></button>
     {% endblock %}
+</div>
 </body>
 </html>
