--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -2,7 +2,7 @@
 {% block title %} Edit Post{% endblock %}
 
 {% block content %}
-
+<form action="/posts/{{ post.id }}/edit" method="POST">
 <h3>
     Edit Post
 </h3>
@@ -23,7 +23,7 @@
 
   <div class="form-group row">
     <div class="ml-auto mr-3">
-      <a href="/users/{{ user.id }}" class="btn btn-info">Cancel</a>
+      <a href="/posts/{{ post.id }}" class="btn btn-info">Cancel</a>
       <button type="submit" class="btn btn-success">Add</button>
     </div>
   </div>
