--- a/templates/posts_homepage.html
+++ b/templates/posts_homepage.html
@@ -15,4 +15,7 @@
     <small>By {{post.user.first_name}}</small>
 </p>
 {% endfor %}
+<div class="">
+<button class="btn btn-primary"><a href="/" style="color:white">Add Post</a></button>
+</div>
 {% endblock %}
