--- a/templates/show_post_by_id.html
+++ b/templates/show_post_by_id.html
@@ -11,9 +11,20 @@
     <p>{{ post.content }}</p>
     <p><i>By {{ post.user.get_full_name }} </i></p>
 
+
 <form action="">
-    <button class="btn btn-outline-primary" formmethod="GET" formaction="/posts/{{ post.id }}/">Cancel</button>
-    <button class="btn btn-primary" formmethod="GET" formaction="/posts/{{post.id }}/edit">Edit</button>
-    <button class="btn btn-danger" formmethod="POST" formaction="/posts/{{post.id }}/delete">Delete</button>
+    <button class="btn btn-outline-primary" formmethod="GET" formaction="/">Go home</button>
+    <button class="btn btn-primary" formmethod="GET" formaction="/posts/{{ post.id }}/edit">Edit</button>
+    <button class="btn btn-danger" formmethod="POST" formaction="/posts/{{ post.id }}/delete">Delete</button>
 </form>
+<hr>
+
+<small>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+            {{message}}
+            {% endfor %}
+        {% endif %} 
+    {% endwith %}    </small>
 {% endblock %}
