--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -4,9 +4,11 @@
 {% endblock %}
 {% block content %}
 {% block top_text %}{% endblock %}
+
     <h3>
-        Create New Post for {user.name}:
+        Create New Post for {{user.get_full_name}}:
     </h3>
+    <form method="POST">
     <div class="form-group row">
         <label for="title" class="col-sm-2 col-form-label">Title</label>
         <div class="col-sm-10">
