--- a/templates/show_post_by_id.html
+++ b/templates/show_post_by_id.html
@@ -9,7 +9,7 @@
     </h3>
 
     <p>{{ post.content }}</p>
-    <p><i>By {{ post.user.get_full_name }} </i></p>
+    <p><i>By <a href="/users/{{user_id}}">{{ post.user.get_full_name }}</a> </i></p>
 
 
 <form action="">
